--- a/css/styles.css
+++ b/css/styles.css
@@ -192,11 +192,10 @@ ul {
 
 .order-btn {
     display: block;
-    height: 50px;
-    width: 216px;
-    border-radius: 4px;
     margin: 30px auto 0 auto;
+    padding: 10px 32px;
 
+    border-radius: 4px;
     background-color: var(--blue);
     box-shadow: 0px 4px 4px var(--btn-box-shadow);
     cursor: pointer;
@@ -207,6 +206,7 @@ ul {
     text-align: center;
     color:var(--white);
     font-family: inherit;
+    border: none;
 }
 
 .order-btn:active {
@@ -307,7 +307,7 @@ ul {
 .form-field-input {
     position: relative;
     height: 40px;
-    margin-bottom: 28px;
+    width: 100%;
     padding-left: 48px;
 }
 
@@ -336,9 +336,8 @@ ul {
 
 textarea {
     resize: none;
-    width: 448px;
+    width: 100%;
     height: 120px;
-    margin-bottom: 20px;
     padding: 16px;
 }
 textarea::placeholder {
@@ -347,26 +346,28 @@ textarea::placeholder {
 }
 
 .form-field {
-    position: relative;
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    margin-bottom: 10px;
     color: var(--grey-text);
+}
+
+.form-field:nth-last-child(-n + 3) {
+    margin-bottom: 20px;
 }
 
 .form-field-label {
     color: var(--grey-text);
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    transform: translateY(-110%);
+    margin-bottom: 4px;
 }
-
+.form-input-span {
+    position: relative;
+}
 .submit-btn {
     display: block;
-    height: 50px;
-    width: 200px;
+    /* height: 50px;
+    width: 200px; */
+    padding: 10px 52px;
     border-radius: 4px;
     margin: 30px auto 0 auto;
 
@@ -380,6 +381,7 @@ textarea::placeholder {
     text-align: center;
     color:var(--white);
     font-family: inherit;
+    border: none;
 
     transition-property: background-color;
     transition-duration: 250ms;
@@ -781,11 +783,9 @@ address {
     display: flex;
     align-items: center;
     text-align: center;
-    padding-left: 28px;
+    padding: 10px 28px;
     
     color: #FFFFFF;
-    width: 200px;
-    height: 50px;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -793,6 +793,7 @@ address {
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: none;
 }
 .submit-mail > span {
     margin-right: 10px;
